--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,17 @@ version: '3'
 
 services:
   app:
+    environment:
+      - ENVIRONMENT=
+      - PORT=
+      - HOST_DB=
+      - PORT_DB=
+      - USER_DB=
+      - PASS_DB=
+      - DATA_DB=
+      - CLIENT_DB=
+      - MAX_POOL_DB=
+      - MIN_POOL_DB=
     container_name: app
     build: .
     ports:
