--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p .",
+    "start": "node dist/server.js",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --ext .ts --fix",
-    "build": "tsc -p .",
-    "start": "nodemon ./src/index.ts",
-    "start:dev": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts"
+    "start:dev": "tsnd --respawn src/server.ts",
+    "docker-compose": "docker-compose up"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "knex": "^0.21.18",
+    "mssql": "^6.3.1",
+    "ts-dotenv": "^0.8.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/knex": "^0.16.1",
     "@types/node": "^14.14.28",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
@@ -30,6 +36,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.1.5"
   }
 }
